--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-bootstrap-5",
-  "version": "0.12.4",
+  "version": "0.12.5",
   "description": "An ember-cli addon for using Bootstrap 5 in Ember applications.",
   "keywords": [
     "bootstrap",
@@ -37,7 +37,7 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-alpha1",
+    "bootstrap": "^5.0.0-beta1",
     "broccoli-funnel": "^2.0.2",
     "broccoli-merge-trees": "^3.0.2",
     "ember-cli-babel": "^7.11.1",
