--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "ember-cli-htmlbars": "^4.0.0",
     "ember-cli-sass": "^10.0.1",
     "fastboot-transform": "^0.1.3",
-    "popper.js": "^2.5.4",
+    "@popperjs/core": "^2.5.4",
     "resolve": "^1.12.0",
     "sass": "^1.23.3"
   },
