--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "^5.0.2",
     "broccoli-funnel": "^2.0.2",
     "broccoli-merge-trees": "^3.0.2",
     "ember-cli-babel": "^7.11.1",
